--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="board" id="board">
+        <!-- Initialize the game board with empty cells -->
+        <div class="cell" id="cell1" onclick="makeMove(0, 0)"></div>
+        <div class="cell" id="cell2" onclick="makeMove(0, 1)"></div>
+        <div class="cell" id="cell3" onclick="makeMove(0, 2)"></div>
+        <div class="cell" id="cell4" onclick="makeMove(1, 0)"></div>
+        <div class="cell" id="cell5" onclick="makeMove(1, 1)"></div>
+        <div class="cell" id="cell6" onclick="makeMove(1, 2)"></div>
+        <div class="cell" id="cell7" onclick="makeMove(2, 0)"></div>
+        <div class="cell" id="cell8" onclick="makeMove(2, 1)"></div>
+        <div class="cell" id="cell9" onclick="makeMove(2, 2)"></div>
+    </div>
+
 </body>
 </html>
