--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="roundModalLabel">Would you like to play again?</h5>
+          <h5 class="modal-title" id="roundModalLabel"></h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-      <!-- <div class="modal-body">
-        </div>--> 
+      <div class="modal-body">
+        Would you like to play again?
+        </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="noRound">No</button>
           <button type="button" class="btn btn-primary" id="yesRound">Yes</button>
