--- a/index.html
+++ b/index.html
@@ -1,56 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 
     <script src="script.js" defer></script>
 </head>
+
 <body>
     <div class="board-container">
-    <div class="board" id="board">
-        <!-- Initialize the game board with empty cells -->
-        <div class="cell" id="cell1" onclick="makeMove(0, 0)"></div>
-        <div class="cell" id="cell2" onclick="makeMove(0, 1)"></div>
-        <div class="cell" id="cell3" onclick="makeMove(0, 2)"></div>
-        <div class="cell" id="cell4" onclick="makeMove(1, 0)"></div>
-        <div class="cell" id="cell5" onclick="makeMove(1, 1)"></div>
-        <div class="cell" id="cell6" onclick="makeMove(1, 2)"></div>
-        <div class="cell" id="cell7" onclick="makeMove(2, 0)"></div>
-        <div class="cell" id="cell8" onclick="makeMove(2, 1)"></div>
-        <div class="cell" id="cell9" onclick="makeMove(2, 2)"></div>
-    </div>
-<!-- Button trigger modal 
+        <div class="board" id="board">
+            <!-- Initialize the game board with empty cells -->
+            <div class="cell" id="cell1" onclick="makeMove(0, 0)"></div>
+            <div class="cell" id="cell2" onclick="makeMove(0, 1)"></div>
+            <div class="cell" id="cell3" onclick="makeMove(0, 2)"></div>
+            <div class="cell" id="cell4" onclick="makeMove(1, 0)"></div>
+            <div class="cell" id="cell5" onclick="makeMove(1, 1)"></div>
+            <div class="cell" id="cell6" onclick="makeMove(1, 2)"></div>
+            <div class="cell" id="cell7" onclick="makeMove(2, 0)"></div>
+            <div class="cell" id="cell8" onclick="makeMove(2, 1)"></div>
+            <div class="cell" id="cell9" onclick="makeMove(2, 2)"></div>
+        </div>
+        <!-- Button trigger modal 
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#roundModal">
     Launch demo modal
   </button>
   -->
-  
-  <!-- Modal -->
-  <div class="modal fade" id="roundModal" tabindex="-1" aria-labelledby="roundModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="roundModalLabel"></h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
+        <div class="row mode-container">
+            <div class="col-sm-4"><button type="button" class="btn btn-outline-primary" id="easy">Easy</button></div>
+            <div class="col-sm-4"><button type="button" class="btn btn-outline-primary" id="medium">Medium</button></div>
+            <div class="col-sm-4"><button type="button" class="btn btn-outline-primary" id="hard">Hard</button></div>
         </div>
-      <div class="modal-body">
-        Would you like to play again?
+
+        <!-- Modal -->
+        <div class="modal fade" id="roundModal" tabindex="-1" aria-labelledby="roundModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="roundModalLabel"></h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Would you like to play again?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="noRound">No</button>
+                        <button type="button" class="btn btn-primary" id="yesRound">Yes</button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="noRound">No</button>
-          <button type="button" class="btn btn-primary" id="yesRound">Yes</button>
-        </div>
-      </div>
     </div>
-  </div>
-</div>
 
 
-<script async src="https://cdn.jsdelivr.net/npm/es-module-shims@1/dist/es-module-shims.min.js" crossorigin="anonymous"></script>
+    <script async src="https://cdn.jsdelivr.net/npm/es-module-shims@1/dist/es-module-shims.min.js"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
